--- a/src/Presentation/Views/Shared/_ServerSideCardTableLayout.cshtml
+++ b/src/Presentation/Views/Shared/_ServerSideCardTableLayout.cshtml
@@ -19,6 +19,10 @@
     @RenderSection("Fab", required: false)
 }
 
+@section Body {
+    @RenderSection("Body", required: false)
+}
+
 
 @section Scripts {
     <script src="~/js/Shared/ServerSideCardTableList.js"></script>
