--- a/src/Presentation/Views/Authors/Authors.cshtml
+++ b/src/Presentation/Views/Authors/Authors.cshtml
@@ -48,7 +48,7 @@
 
 
 @section Table {
-    <table id="table" class="table table-striped">
+    <table id="table" class="table table-hover table-striped">
         <thead>
             <tr>
                 <th>Name</th>
