--- a/src/Presentation/Views/Books/Books.cshtml
+++ b/src/Presentation/Views/Books/Books.cshtml
@@ -53,7 +53,7 @@
 }
 
 @section Table {
-    <table id="table" class="table table-striped">
+    <table id="table" class="table table-hover table-striped">
         <thead>
             <tr>
                 <th>Title</th>
