--- a/src/Presentation/Views/Genres/Genres.cshtml
+++ b/src/Presentation/Views/Genres/Genres.cshtml
@@ -37,7 +37,7 @@
 }
 
 @section Table {
-    <table id="table" class="table table-striped">
+    <table id="table" class="table table-hover table-striped">
         <thead>
             <tr>
                 <th>Name</th>
