--- a/src/Presentation/Views/Languages/Languages.cshtml
+++ b/src/Presentation/Views/Languages/Languages.cshtml
@@ -32,7 +32,7 @@
 }
 
 @section Table {
-    <table id="table" class="table table-striped">
+    <table id="table" class="table table-hover table-striped">
         <thead>
             <tr>
                 <th>Name</th>
