--- a/src/Presentation/Views/EmployeeManagement/Employees.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/Employees.cshtml
@@ -9,7 +9,19 @@
 @section Cards {
     @foreach (var employee in Model)
     {
-        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 list-card" data-username="@employee.Username" data-fullname="@(employee.FirstName + " " + employee.LastName)" data-firstname="@employee.FirstName" data-lastname="@employee.LastName" data-startdate="@employee.StartDate" data-includedeleted="@employee.IsActive.ToString().ToLower()" data-dateofbirth="@employee.DateOfBirth" style="text-decoration:none; color:black" href="/Employees/@employee.Id">
+        <a
+            class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 list-card"
+            data-username="@employee.Username"
+            data-fullname="@(employee.FirstName + " " + employee.LastName)" 
+            data-firstname="@employee.FirstName" 
+            data-lastname="@employee.LastName"
+            data-startdate="@employee.StartDate"
+            data-startdate_rangetype="datetime-local"
+           data-donotincludedeleted="@employee.IsActive.ToString().ToLower()"
+            data-dateofbirth="@employee.DateOfBirth"
+            data-dateofbirth_rangetype="datetime-local"
+            style="text-decoration:none; color:black" 
+            href="/Employees/@employee.Id">
             <div class="card h-100 shadow-sm d-flex flex-column">
                 <div class="card-header d-flex justify-content-between align-items-center text-white">
                     <span class="card-header-name">@employee.FirstName @employee.LastName</span>
@@ -68,7 +80,16 @@
         <tbody>
             @foreach (var employee in Model)
             {
-                <tr class="table-row" data-username="@employee.Username" data-fullname="@(employee.FirstName + " " + employee.LastName)" data-firstname="@employee.FirstName" data-lastname="@employee.LastName" data-startdate="@employee.StartDate" data-includedeleted="@employee.IsActive.ToString().ToLower()" data-dateofbirth="@employee.DateOfBirth">
+                <tr class="table-row"
+                    data-username="@employee.Username"
+                    data-fullname="@(employee.FirstName + " " + employee.LastName)" 
+                    data-firstname="@employee.FirstName"
+                    data-lastname="@employee.LastName"
+                    data-startdate="@employee.StartDate"
+                    data-startdate_rangetype = "datetime-local"
+                    data-donotincludedeleted="@employee.IsActive.ToString().ToLower()" 
+                    data-dateofbirth="@employee.DateOfBirth"
+                    data-dateofbirth_rangetype = "datetime-local">
                     <td>@employee.FirstName</td>
                     <td>@employee.LastName</td>
                     <td>@employee.Username</td>
