--- a/src/Presentation/Views/Books/Book.cshtml
+++ b/src/Presentation/Views/Books/Book.cshtml
@@ -51,25 +51,30 @@
                             </div>
                         </div>
 
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-6  mb-3">
+                            <div class="form-group">
+                                <label asp-for="DeletedDate" class="form-label"></label>
+                                <input asp-for="DeletedDate" class="form-control" type="date" readonly />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2 mb-3">
                             <div class="form-group">
                                 <label asp-for="OriginalLanguageId" class="form-label"></label>
                                 <select asp-for="OriginalLanguageId" id="OriginalLanguageId" class="form-select"></select>
                                 <span asp-validation-for="OriginalLanguageId" class="text-danger"></span>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-5 mb-3">
                             <div class="form-group">
                                 <label asp-for="GenreIds" class="form-label"></label>
                                 <select id="GenreIds" asp-for="GenreIds" class="form-select" multiple></select>
                                 <span asp-validation-for="GenreIds" class="text-danger"></span>
                             </div>
                         </div>
-
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-5 mb-3">
                             <div class="form-group">
                                 <label asp-for="AuthorIds" class="form-label"></label>
                                 <select id="AuthorIds" asp-for="AuthorIds" class="form-select" multiple></select>
