renamed LanguageDetailViewModel to LanguageDetailedViewModel

--- a/src/Presentation/Views/Languages/Language.cshtml
+++ b/src/Presentation/Views/Languages/Language.cshtml
@@ -1,4 +1,4 @@
-@model Nika1337.Library.Presentation.Models.Languages.LanguageDetailViewModel
+@model Nika1337.Library.Presentation.Models.Languages.LanguageDetailedViewModel
 @{
     Layout = "_DetailLayout";
     ViewData["Title"] = Model.Name;
