fixed small bugs in room views

--- a/src/Presentation/Views/Rooms/Room.cshtml
+++ b/src/Presentation/Views/Rooms/Room.cshtml
@@ -7,7 +7,7 @@
     var actionButtonClass = Model.DeletedDate == null ? "btn-danger" : "btn-warning";
 }
 
-<form asp-route="Rooms/" method="post" class="needs-validation" novalidate>
+<form asp-route="Location/Rooms/" method="post" class="needs-validation" novalidate>
     <div class="row justify-content-center">
         <div class="col-xl-8">
             <div class="card mb-4">
