removed bookshelf and shelf entities, because i noticed, that they are only ids, and nothing else. modified rooms feature to include Editions instead of Bookshelfs

--- a/src/Presentation/Views/Rooms/Rooms.cshtml
+++ b/src/Presentation/Views/Rooms/Rooms.cshtml
@@ -36,7 +36,7 @@
                     </div>
                     <div class="property">
                         <span class="text-muted">Bookshelves:</span>
-                        <span>@room.BookshelfCount</span>
+                        <span>@room.EditionsCount</span>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                     <td>@room.Floor</td>
                     <td>@room.RoomNumber</td>
                     <td>@room.MaxCapacityOfPeople</td>
-                    <td>@room.BookshelfCount</td>
+                    <td>@room.EditionsCount</td>
                     <td>
                         @if (room.IsActive)
                         {
