--- a/src/Presentation/Views/Publishers/Publisher.cshtml
+++ b/src/Presentation/Views/Publishers/Publisher.cshtml
@@ -1,16 +1,20 @@
-﻿@model Nika1337.Library.Presentation.Models.Publishers.PublisherCreateViewModel
+﻿@model Nika1337.Library.Presentation.Models.Publishers.PublisherDetailedViewModel
 
 @{
     Layout = "_DetailLayout";
-    ViewData["Title"] = "Add Publisher";
+    ViewData["Title"] = Model.PublisherName;
+    var userAction = Model.DeletedDate == null ? "Delete" : "Renew";
+    var actionButtonClass = Model.DeletedDate == null ? "btn-danger" : "btn-warning";
 }
 
-<form asp-action="AddPublisher" method="post" class="needs-validation" novalidate>
+<form asp-route="Books/Publishers/" method="post" class="needs-validation" novalidate>
     <div class="row justify-content-center">
         <div class="col-lg-4">
             <div class="card mb-4">
                 <h5 class="card-header">Add Room</h5>
                 <div class="card-body">
+                    <input type="hidden" asp-for="Id" />
+
                     <div class="mb-3">
                         <div class="form-group">
                             <label asp-for="PublisherName" class="form-label"></label>
@@ -38,7 +42,7 @@
                     <div class="mb-3">
                         <div class="form-group">
                             <label asp-for="ContactInformation.PhoneNumber" class="form-label"></label>
-                            <input asp-for="ContactInformation.PhoneNumber" class="form-control"  />
+                            <input asp-for="ContactInformation.PhoneNumber" class="form-control" />
                             <span asp-validation-for="ContactInformation.PhoneNumber" class="text-danger"></span>
                         </div>
                     </div>
@@ -49,12 +53,18 @@
         <div class="col-lg-4">
             <partial name="_AddressPartial" for="@Model.ContactInformation.Address" />
         </div>
-    </div>
 
-    <div class="d-flex align-items-end justify-content-end myfab-container">
-        <button type="submit" class="btn btn-primary myfab">Add Publisher</button>
-    </div>
+        <div class="d-flex align-items-end justify-content-end myfab-container">
+            <div class="d-flex flex-column">
+                <button type="submit" class="btn btn-primary myfab mb-2">Save Changes</button>
+                <button type="button" class="btn @actionButtonClass myfab" data-bs-toggle="modal" data-bs-target="#actionModal">@userAction</button>
+            </div>
+        </div>
 </form>
+
+@section ActionModal {
+    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Publisher"));
+}
 
 @section Error {
     @if (!string.IsNullOrEmpty(Model.ErrorMessage))
@@ -69,4 +79,12 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+
+    <script src="~/js/Shared/ActionModal.js"></script>
+    <script src="~/js/Library/Publishers/Publisher.js"></script>
+
+    <script>
+        const id = '@Model.Id';
+        const userAction = '@userAction';
+    </script>
 }
