--- a/src/Presentation/Views/Accounts/Account.cshtml
+++ b/src/Presentation/Views/Accounts/Account.cshtml
@@ -8,7 +8,7 @@
 
 <form asp-route="Accounts/" method="post" class="needs-validation" novalidate>
     <div class="row justify-content-center">
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <div class="card mb-4">
                 <h5 class="card-header">Account Details</h5>
                 <div class="card-body">
@@ -50,8 +50,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <partial name="_AddressPartial" for="@Model.ContactInformation.Address" />
+        </div>
+        <div class="col-lg-3">
             <div class="card mb-4">
                 <h5 class="card-header">Account Statistics</h5>
                 <div class="card-body">
