add anchor element to navigate to respective books editions in books view, and improved specification.

--- a/src/Presentation/Views/Books/Book.cshtml
+++ b/src/Presentation/Views/Books/Book.cshtml
@@ -89,6 +89,12 @@
                             <button type="button" class="btn @actionButtonClass myfab" data-bs-toggle="modal" data-bs-target="#actionModal">@userAction</button>
                         </div>
                     </div>
+
+                    <div class="row mt-3">
+                        <div class="col-12">
+                            <a href="/Books/@Model.Id/BookEditions" class="text-decoration-underline">See all editions</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
