added very many things, didnt commit because it was a mess and i didn't know what i was doing.
Added breadcrumb partial for displaying breadcrumbs useful for navigation. (still have to add it to every view).

removed link to custom bootstrap, because i want to make color pallete easily changeable, hence, for now i will be using default bootstrap to make things more consistent, and then it will be customized.

added some css and html structure changes, like copyright claim at the bottom of the page, also content is in container, so better visibility for larger screens.

--- a/src/Presentation/Views/Accounts/Accounts.cshtml
+++ b/src/Presentation/Views/Accounts/Accounts.cshtml
@@ -81,7 +81,7 @@
                         }
                     </td>
                     <td>
-                        <a href="/Accounts/@account.Id" class="btn btn-dark btn-sm no-wrap">View Details</a>
+                        <a href="/Accounts/@account.Id" class="btn btn-info btn-sm no-wrap">View Details</a>
                     </td>
                 </tr>
             }
