--- a/src/Presentation/Views/Authors/Author.cshtml
+++ b/src/Presentation/Views/Authors/Author.cshtml
@@ -86,7 +86,7 @@
 
 
 @section ActionModal {
-    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Author"));
+    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Author"))
 }
 
 @section Scripts {
