--- a/src/Presentation/Views/Authors/Authors.cshtml
+++ b/src/Presentation/Views/Authors/Authors.cshtml
@@ -78,7 +78,7 @@
                         }
                     </td>
                     <td>
-                        <a href="/Books/Authors/@author.Id" class="btn btn-dark btn-sm no-wrap">View Profile</a>
+                        <a href="/Books/Authors/@author.Id" class="btn btn-info btn-sm no-wrap">View Details</a>
                     </td>
                 </tr>
             }
