--- a/src/Presentation/Views/Books/Book.cshtml
+++ b/src/Presentation/Views/Books/Book.cshtml
@@ -102,7 +102,7 @@
 </form>
 
 @section ActionModal {
-    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Book"));
+    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Book"))
 }
 
 
