--- a/src/Presentation/Views/Books/Books.cshtml
+++ b/src/Presentation/Views/Books/Books.cshtml
@@ -87,7 +87,7 @@
                         }
                     </td>
                     <td>
-                        <a href="/Books/@book.Id" class="btn btn-dark btn-sm no-wrap">View Details</a>
+                        <a href="/Books/@book.Id" class="btn btn-info btn-sm no-wrap">View Details</a>
                     </td>
                 </tr>
             }
