--- a/src/Presentation/Views/EmployeeAccount/ForgotPassword.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/ForgotPassword.cshtml
@@ -17,7 +17,7 @@
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
 
-                        <button type="submit" class="btn btn-dark w-100">
+                        <button type="submit" class="btn btn-primary w-100">
                             Send Verification Email
                         </button>
                     </form>
