--- a/src/Presentation/Views/EmployeeAccount/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/Profile.cshtml
@@ -10,7 +10,7 @@
     };
 }
 
-<div class="container pt-5">
+<div class="pt-5">
     @if (!string.IsNullOrEmpty(Model.ErrorMessage))
     {
         <div class="d-flex flex-column align-items-center">
