--- a/src/Presentation/Views/EmployeeAccount/SignIn.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/SignIn.cshtml
@@ -30,7 +30,7 @@
                             </div>
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
-                        <button type="submit" class="btn btn-dark w-100">Sign In</button>
+                        <button type="submit" class="btn btn-primary w-100">Sign In</button>
                         <div class="mt-3 text-center">
                             <a asp-controller="EmployeeAccount" asp-action="ForgotPassword">Forgot your password?</a>
                         </div>
