--- a/src/Presentation/Views/EmployeeManagement/Employees.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/Employees.cshtml
@@ -108,7 +108,7 @@
                         }
                     </td>
                     <td>
-                        <a href="/Employees/@employee.Id" class="btn btn-dark btn-sm">View Profile</a>
+                        <a href="/Employees/@employee.Id" class="btn btn-info btn-sm">View Profile</a>
                     </td>
                 </tr>
             }
