--- a/src/Presentation/Views/Genres/Genre.cshtml
+++ b/src/Presentation/Views/Genres/Genre.cshtml
@@ -67,7 +67,7 @@
 
 
 @section ActionModal {
-    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Genre"));
+    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Genre"))
 }
 
 @section Scripts {
