--- a/src/Presentation/Views/Genres/Genres.cshtml
+++ b/src/Presentation/Views/Genres/Genres.cshtml
@@ -63,7 +63,7 @@
                         }
                     </td>
                     <td class="no-wrap">
-                        <a href="/Books/Genres/@genre.Id" class="btn btn-dark btn-sm">View Details</a>
+                        <a href="/Books/Genres/@genre.Id" class="btn btn-info btn-sm">View Details</a>
                     </td>
                 </tr>
             }
