--- a/src/Presentation/Views/Languages/Language.cshtml
+++ b/src/Presentation/Views/Languages/Language.cshtml
@@ -57,7 +57,7 @@
 
 
 @section ActionModal {
-    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Language"));
+    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Language"))
 }
 
 @section Scripts {
