--- a/src/Presentation/Views/Publishers/Publisher.cshtml
+++ b/src/Presentation/Views/Publishers/Publisher.cshtml
@@ -69,7 +69,7 @@
 </form>
 
 @section ActionModal {
-    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Publisher"));
+    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Publisher"))
 }
 
 @section Error {
