--- a/src/Presentation/Views/Publishers/Publishers.cshtml
+++ b/src/Presentation/Views/Publishers/Publishers.cshtml
@@ -69,7 +69,7 @@
                         }
                     </td>
                     <td>
-                        <a href="/Books/Publishers/@publisher.Id" class="btn btn-dark btn-sm no-wrap">View Details</a>
+                        <a href="/Books/Publishers/@publisher.Id" class="btn btn-info btn-sm no-wrap">View Details</a>
                     </td>
                 </tr>
             }
