--- a/src/Presentation/Views/Rooms/Room.cshtml
+++ b/src/Presentation/Views/Rooms/Room.cshtml
@@ -63,7 +63,7 @@
 </form>
 
 @section ActionModal {
-    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Room"));
+    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Room"))
 }
 
 @section Error {
