--- a/src/Presentation/Views/Shared/_ClientSideCardTableLayout.cshtml
+++ b/src/Presentation/Views/Shared/_ClientSideCardTableLayout.cshtml
@@ -15,6 +15,9 @@
     @RenderSection("Fab", required: false)
 }
 
+@section Breadcrumb {
+    @RenderSection("Breadcrumb", required: false)
+}
 
 @section Scripts {
     <script src="~/js/Shared/ClientSideCardTableList.js"></script>
