--- a/src/Presentation/Views/Shared/_ServerSideCardTableLayout.cshtml
+++ b/src/Presentation/Views/Shared/_ServerSideCardTableLayout.cshtml
@@ -23,6 +23,9 @@
     @RenderSection("Body", required: false)
 }
 
+@section Breadcrumb {
+    @RenderSection("Breadcrumb", required: false)
+}
 
 @section Scripts {
     <script src="~/js/Shared/ServerSideCardTableList.js"></script>
