--- a/src/Presentation/Views/AuditLogs/AuditLogs.cshtml
+++ b/src/Presentation/Views/AuditLogs/AuditLogs.cshtml
@@ -2,6 +2,20 @@
 @{
     ViewData["Title"] = "Audit Logs";
     Layout = "_ServerSideCardTableLayout";
+
+    string GetBadgeClass(string action)
+    {
+        var badgeClass = action switch
+        {
+            "Modified" => "bg-warning",
+            "Added" => "bg-success",
+            "Deleted" => "bg-danger",
+            _ => "bg-primary"
+        };
+
+        return badgeClass;
+    }
+
 }
 
 @section Paging {
@@ -15,7 +29,7 @@
             <div class="card h-100 shadow-sm d-flex flex-column">
                 <div class="card-header d-flex justify-content-between align-items-center text-white">
                     <span class="card-header-name">@log.EntityName</span>
-                    <span class="badge bg-primary">@log.Action</span>
+                    <span class="badge @GetBadgeClass(log.Action)">@log.Action</span>
                 </div>
                 <div class="card-body d-flex flex-column justify-content-between">
                     <div class="property">
@@ -76,7 +90,7 @@
                     <td>@log.UserId</td>
                     <td>@log.EntityName</td>
                     <td>@log.ModifiedRowId</td>
-                    <td><span class="badge bg-primary">@log.Action</span></td>
+                    <td><span class="badge @GetBadgeClass(log.Action)">@log.Action</span></td>
                     <td>@log.Timestamp</td>
                     <td>
                         <button class="btn btn-dark btn-sm no-wrap" onclick='showLogDetails(@Json.Serialize(log))'>
