--- a/src/Presentation/Views/EmployeeAccount/ChangeEmail.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/ChangeEmail.cshtml
@@ -17,7 +17,7 @@
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
 
-                        <button type="submit" class="btn btn-dark">Send Confirmation Email</button>
+                        <button type="submit" class="btn btn-primary">Send Confirmation Email</button>
                     </form>
                 </div>
             </div>
