--- a/src/Presentation/Views/EmployeeAccount/ChangePassword.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/ChangePassword.cshtml
@@ -42,7 +42,7 @@
                             <span asp-validation-for="RepeatPassword" class="text-danger"></span>
                         </div>
 
-                        <button type="submit" class="btn btn-dark">Change Password</button>
+                        <button type="submit" class="btn btn-primary">Change Password</button>
                     </form>
                 </div>
             </div>
