--- a/src/Presentation/Views/Languages/Languages.cshtml
+++ b/src/Presentation/Views/Languages/Languages.cshtml
@@ -15,7 +15,7 @@
     {
         <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 list-card" data-name="@language.Name" data-active="@(!language.DeletedDate.HasValue)" href="/Books/Languages/@language.Id" style="text-decoration:none">
             <div class="card h-100 shadow-sm d-flex flex-column">
-                <div class="card-header d-flex justify-content-between align-items-center text-white">
+                <div class="card-header d-flex justify-content-between align-items-center text-white" style="border-bottom:unset">
                     <span class="card-header-name">@language.Name</span>
                     @if (!language.DeletedDate.HasValue)
                     {
@@ -56,7 +56,7 @@
                         }
                     </td>
                     <td class="no-wrap">
-                        <a href="/Books/Languages/@language.Id" class="btn btn-dark btn-sm">View Details</a>
+                        <a href="/Books/Languages/@language.Id" class="btn btn-info btn-sm">View Details</a>
                     </td>
                 </tr>
             }
