--- a/src/Presentation/Views/Shared/Components/Navigation/Default.cshtml
+++ b/src/Presentation/Views/Shared/Components/Navigation/Default.cshtml
@@ -67,7 +67,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
+    <div class="container" style="margin-top: 0px">
         <a class="navbar-brand" href="/">Library Management</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
