--- a/src/Presentation/Views/Shared/_FilterPartial.cshtml
+++ b/src/Presentation/Views/Shared/_FilterPartial.cshtml
@@ -6,10 +6,10 @@
     </div>
     <div class="offcanvas-body">
         <div id="filterOptions"></div>
-        <button class="btn btn-primary w-100 mt-3" onclick="filter()">Filter</button>
+        <button class="btn btn-secondary w-100 mt-3" onclick="filter()">Filter</button>
     </div>
 </div>
 
-<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#filteringSidebar" aria-controls="filteringSidebar">
+<button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#filteringSidebar" aria-controls="filteringSidebar">
     <i class="fas fa-filter"></i>
 </button>
