--- a/src/Presentation/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Views/Shared/_Layout.cshtml
@@ -1,30 +1,43 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"]</title>
-
-
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-        <link rel="stylesheet" href="~/css/custom_bootstrap.css" asp-append-version="true" />
-        @RenderSection("Styles", required: false)
-    </head>
-    <body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <!--    <link rel="stylesheet" href="~/css/custom_bootstrap.css" asp-append-version="true" /> -->
+    <link rel="stylesheet" href="~/css/Shared/Breadcrumb.css" asp-append-version="true" />
+    @RenderSection("Styles", required: false)
+</head>
+<body>
+    <div class="content-wrapper">
         <header>
             @await Component.InvokeAsync("Navigation")
         </header>
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        <div class="breadcrumb-container">
+            <div class="container" style="margin-top: 0px">
+                @RenderSection("Breadcrumb", required: false)
+            </div>
+        </div>
+        <div class="container">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
+    </div>
 
+    <footer class="border-top footer text-muted">
+        <div class="container mb-5 mt-5">
+            &copy; @DateTime.Now.Year - Library Management
+        </div>
+    </footer>
 
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        <script src="~/js/Shared/Navigation.js"></script>
-        @RenderSection("Scripts", required: false)
-    </body>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/Shared/Navigation.js"></script>
+
+    @RenderSection("Scripts", required: false)
+</body>
 </html>
