--- a/src/Presentation/wwwroot/css/Shared/PaginationPartial.css
+++ b/src/Presentation/wwwroot/css/Shared/PaginationPartial.css
@@ -8,22 +8,22 @@
 }
 
 .page-link {
-    color: #333;
+    color: var(--bs-secondary);
     background-color: #fff;
     border: 1px solid #ddd;
     padding: 8px 12px;
     transition: all 0.3s ease;
 }
 
-.page-link:hover {
-    background-color: #f8f9fa;
-    border-color: #ddd;
-    color: #6200ea;
-}
+    .page-link:hover {
+        background-color: #f8f9fa;
+        border-color: #ddd;
+        color: var(--bs-secondary);
+    }
 
 .page-item.active .page-link {
-    background-color: #6200ea;
-    border-color: #6200ea;
+    background-color: var(--bs-secondary);
+    border-color: var(--bs-secondary);
     color: #fff;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .page-link:focus {
-    box-shadow: 0 0 0 0.2rem rgba(98, 0, 234, 0.25);
+    box-shadow: 0 0 0 0.2rem rgba(var(--bs-secondary-rgb), 0.25);
 }
 
 .page-item:not(:first-child):not(:last-child) .page-link {
